Fix #18 - hero image covers 95% of viewport height

--- a/css/hero-image.module.scss
+++ b/css/hero-image.module.scss
@@ -17,7 +17,7 @@
 .heroImage{
     position: absolute;
     width: 100vw;
-    height: 100vh;
+    height: 95vh;
     z-index: -5;
     background-size: cover;
     background-position: center center;
@@ -36,7 +36,7 @@
     text-align: center;
     color: white;
     width: 100vw;
-    height: 100vh;
+    height: 95vh;
     z-index: 0;
     
 }
